welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite()
droite()
While(! estFaceMur){
	avance()
}
while(!estSurBiscuit)
{avance()

prendBiscuit()
avance()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()
gauche()
gauche()
porteBiscuit()
}